# TimeTracker

./: .clang-format  .gitignore  CMakeLists.txt
res/: conf.txt
src/: activity.hpp  configuration.hpp  date.hpp  history.hpp  main.cpp  scene.hpp  utils.hpp
src/peztool/: peztool.hpp
src/peztool/core/: container.hpp  entity.hpp  render.hpp  scene.hpp  static_interface.hpp  system.hpp
src/peztool/utils/: async_task.hpp  async_task_lambda.hpp  binary_io.hpp  color_utils.hpp  configuration_loader.hpp  cooldown.hpp  dag.hpp  events.hpp  grid.hpp  math.hpp  misc.hpp  number_generator.hpp  racc.hpp  raycast.hpp  resources.hpp  signal.hpp  store.hpp  thread_pool.hpp  tostring.hpp  vec.hpp  vec4.hpp  watcher.hpp  zip.hpp
src/peztool/utils/interpolation/: interpolable.hpp  interpolation.hpp  standard_interpolated_value.hpp
src/peztool/utils/render/: background_grid.hpp  quad_vertex_array.hpp  tracer.hpp  utils.hpp
src/peztool/utils/render/blur/: blur.hpp  shader.hpp
src/peztool/utils/render/card/: card.hpp  card_empty.hpp  card_outlined.hpp  shader.hpp  shadow_shader.hpp  utils.hpp
src/peztool/utils/render/chart/: bar_graph.hpp  line_chart.hpp  scale.hpp
src/ui/: activity_button.hpp  activity_container.hpp  activity_info.hpp  container.hpp  day_overview_bar.hpp  slot_info.hpp  time_bar.hpp  ui.hpp  ui_common.hpp  ui_configuration.hpp  ui_data.hpp  window_header.hpp
src/ui/shader/: hatch.hpp
src/ui/standard/: button.hpp  button_fancy.hpp  drawer.hpp  gauge.hpp  origin.hpp  radio_button.hpp  radio_group.hpp  slider.hpp  text_label.hpp  toggle.hpp  widget.hpp
